# StormForge3rdParties

./: .gitignore  README.md
3rdParties/: CMakeLists.txt  README.md
3rdParties/VulkanSDK/1.0.57.0/: LICENSE.txt
3rdParties/VulkanSDK/1.0.57.0/Demos/: DEMOS.sln  cube.vcxproj  vulkaninfo.vcxproj
3rdParties/VulkanSDK/1.0.57.0/Documentation/: release_notes-1.0.html
3rdParties/VulkanSDK/1.0.57.0/Documentation/Vulkan Documentation/: Getting Started.lnk  Release Notes.lnk  SPIRV Optimization.lnk  SPIRV Toolchain.lnk  Samples Index.lnk  Via.lnk  Vulkan Samples.lnk
3rdParties/VulkanSDK/1.0.57.0/Lib32/: VKstatic.1.lib  VkLayer_object_tracker.lib  VkLayer_screenshot.lib  VkLayer_threading.lib  VkLayer_unique_objects.lib  VkLayer_utils.lib  shaderc_combined.lib
3rdParties/VulkanSDK/1.0.57.0/Source/layers/: api_dump.cpp  api_dump_html.h  api_dump_text.h  parameter_validation.h  thread_check.h  vk_dispatch_table_helper.h  vk_enum_string_helper.h  vk_struct_size_helper.c
3rdParties/VulkanSDK/1.0.57.0/Source/lib/: VKstatic.1.lib  VkLayer_monitor.lib  VkLayer_object_tracker.lib  VkLayer_screenshot.lib  vulkan-1.lib
3rdParties/VulkanSDK/1.0.57.0/Source/lib32/: VkLayer_core_validation.lib  VkLayer_object_tracker.lib  VkLayer_unique_objects.lib  vulkan-1.lib
3rdParties/VulkanSDK/1.0.57.0/glslang/SPIRV/: SPVRemapper.cpp
3rdParties/VulkanSDK/1.0.57.0/glslang/StandAlone/: DirStackFileIncluder.h
3rdParties/VulkanSDK/1.0.57.0/glslang/glslang/: CMakeLists.txt
3rdParties/VulkanSDK/1.0.57.0/glslang/gtests/: CMakeLists.txt  Hlsl.FromFile.cpp  Link.FromFile.Vk.cpp  main.cpp
3rdParties/VulkanSDK/1.0.57.0/glslang/hlsl/: CMakeLists.txt  hlslGrammar.cpp  hlslGrammar.h  hlslParseables.cpp
3rdParties/VulkanSDK/1.1.82.1/Bin32/: VkLayer_object_tracker.json  VkLayer_threading.json
3rdParties/VulkanSDK/1.1.82.1/Config/: vk_layer_settings.txt
3rdParties/VulkanSDK/1.1.82.1/Demos/: DEMOS.sln  cubepp.vcxproj  demo.h  demo_layer.vcxproj
3rdParties/VulkanSDK/1.1.82.1/Documentation/Vulkan Documentation/: API Specification.lnk  Device Simulation.lnk  Index.lnk  Loader And Layer Interface.lnk  Release Notes.lnk  SPIRV Toolchain.lnk  Tutorial.lnk  Vulkan Specification.lnk
3rdParties/VulkanSDK/1.1.82.1/LayerFactory/: layer_factory.cpp  layer_factory.h
3rdParties/VulkanSDK/1.1.82.1/LayerFactory/Project/: layer_factory.vcxproj  vk_dispatch_table_helper.h  vk_format_utils.h  vk_object_types.h
3rdParties/VulkanSDK/1.1.82.1/Lib/: VkLayer_screenshot.lib  VkLayer_threading.lib  VkLayer_unique_objects.lib  VkLayer_utils.lib
3rdParties/VulkanSDK/1.1.82.1/Lib32/: VkLayer_api_dump.lib  VkLayer_device_simulation.lib  VkLayer_monitor.lib  VkLayer_parameter_validation.lib  VkLayer_screenshot.lib  VkLayer_threading.lib  shaderc_combined.lib
3rdParties/VulkanSDK/1.1.82.1/Samples/: Tutorial.lnk
3rdParties/VulkanSDK/1.1.82.1/Samples/API-Samples/: get-short-descripts.sh  run_all_samples.sh
3rdParties/VulkanSDK/1.1.82.1/Samples/cmake/: FindVulkan.cmake
3rdParties/VulkanSDK/1.1.82.1/Source/layers/: api_dump.h  buffer_validation.h  core_validation.cpp  core_validation_error_enums.h  core_validation_types.h  device_simulation.cpp  hash_util.h  hash_vk_types.h  monitor.cpp  object_tracker.h  parameter_validation.cpp  screenshot.cpp  screenshot_parsing.cpp  shader_validation.h  thread_check.h  threading.cpp  threading.h  unique_objects.cpp  unique_objects_wrappers.h  vk_enum_string_helper.h  vk_format_utils.cpp  vk_layer_config.h  vk_layer_data.h  vk_layer_table.cpp  vk_layer_utils.h  vk_loader_layer.h  vk_loader_platform.h  vk_safe_struct.cpp
3rdParties/VulkanSDK/1.1.82.1/Source/lib/: VkLayer_assistant_layer.lib  VkLayer_core_validation.lib  VkLayer_device_simulation.lib  VkLayer_object_tracker.lib  VkLayer_screenshot.lib  VkLayer_unique_objects.lib  vulkan-1.lib
3rdParties/VulkanSDK/1.1.82.1/Source/lib32/: VkLayer_assistant_layer.lib  VkLayer_device_simulation.lib  VkLayer_monitor.lib  VkLayer_screenshot.json  VkLayer_utils.lib
3rdParties/VulkanSDK/1.1.82.1/Source/loader/: debug_utils.c  extension_manual.h  gpa_helper.h  loader.c  loader.h  trampoline.c  vk_loader_extensions.c  vk_loader_extensions.h  vk_loader_platform.h  wsi.c
3rdParties/VulkanSDK/1.1.82.1/Templates/: README.txt
3rdParties/VulkanSDK/1.1.82.1/glslang/SPIRV/: CMakeLists.txt  SPVRemapper.h  doc.cpp  doc.h  spvIR.h
3rdParties/VulkanSDK/1.1.82.1/glslang/gtests/: Config.FromFile.cpp  Hlsl.FromFile.cpp
3rdParties/VulkanSDK/1.1.82.1/glslang/hlsl/: hlslAttributes.cpp  hlslParseHelper.cpp  hlslParseables.cpp
3rdParties/src/PlayFab/: CMakeLists.txt
3rdParties/src/curl/: CMakeLists.txt  curl_config.h
3rdParties/src/freetype/: CMakeLists.txt
3rdParties/src/gtest/: CMakeLists.txt  makefile
3rdParties/src/jasper/: CMakeLists.txt
3rdParties/src/jsoncpp/: CMakeLists.txt
3rdParties/src/jsoncpp/include/json/: forwards.h
3rdParties/src/jsoncpp/makefiles/vs11/: jsontest.vcxproj
3rdParties/src/jsoncpp/src/lib_json/: json_reader.cpp  json_value.cpp
3rdParties/src/lcms/: CMakeLists.txt
3rdParties/src/libiconv/: CMakeLists.txt
3rdParties/src/libiconv/configs-1.14/libcharset/: config.h
3rdParties/src/libmng/: CMakeLists.txt
3rdParties/src/libpng/: CMakeLists.txt
3rdParties/src/libtiff/: CMakeLists.txt
3rdParties/src/libxml/: CMakeLists.txt  libxmlconfig.h
3rdParties/src/mbedtls/: CMakeLists.txt
3rdParties/src/mysql/: WinBuild.cmd  WinGen.cmd  build.sh  generate.sh
3rdParties/src/mysql/mysql-connector-c++-8.0.18-src/: CMakeLists.txt  INFO_SRC
3rdParties/src/mysql/mysql-connector-c++-8.0.18-src/common/: result.h
3rdParties/src/mysql/mysql-connector-c++-8.0.18-winx64/: INFO_BIN  INFO_SRC  LICENSE.txt  README.txt
3rdParties/src/openssl/: build1.1.cmd
3rdParties/src/openssl/openssl-1.0.2a/: Makefile.w64
3rdParties/src/rdkafka/: CMakeLists.txt  rdkafka_config.h
3rdParties/src/tinyxml/: CMakeLists.txt
3rdParties/src/yaml/: CMakeLists.txt
3rdParties/src/zlib/: CMakeLists.txt
3rdParties/src/zookeeper/: CMakeLists.txt
3rdParties/src/zookeeperConnector/include/: winconfig.h
(+410 files in other folders)
