

project(iconv)



include_directories(AFTER 
	./
)

set(SRC_FILES
    libiconv-1.15\libcharset\lib\localcharset.c
    libiconv-1.15\lib\genaliases.c
    libiconv-1.15\lib\genaliases2.c
    libiconv-1.15\lib\genflags.c
    libiconv-1.15\lib\gentranslit.c
    libiconv-1.15\lib\iconv.c
    libiconv-1.15\lib\relocatable.c
    libiconv-1.15\include\export.h
    libiconv-1.15\include\iconv.h
    libiconv-1.15\lib\aliases.h
    libiconv-1.15\lib\aliases2.h
    libiconv-1.15\lib\aliases_aix.h
    libiconv-1.15\lib\aliases_aix_sysaix.h
    libiconv-1.15\lib\aliases_dos.h
    libiconv-1.15\lib\aliases_extra.h
    libiconv-1.15\lib\aliases_osf1.h
    libiconv-1.15\lib\aliases_osf1_sysosf1.h
    libiconv-1.15\lib\aliases_sysaix.h
    libiconv-1.15\lib\aliases_syshpux.h
    libiconv-1.15\lib\aliases_sysosf1.h
    libiconv-1.15\lib\aliases_syssolaris.h
    libiconv-1.15\lib\armscii_8.h
    libiconv-1.15\lib\ascii.h
    libiconv-1.15\lib\atarist.h
    libiconv-1.15\lib\big5.h
    libiconv-1.15\lib\big5hkscs1999.h
    libiconv-1.15\lib\big5hkscs2001.h
    libiconv-1.15\lib\big5hkscs2004.h
    libiconv-1.15\lib\big5hkscs2008.h
    libiconv-1.15\lib\big5_2003.h
    libiconv-1.15\lib\c99.h
    libiconv-1.15\lib\canonical.h
    libiconv-1.15\lib\canonical_aix.h
    libiconv-1.15\lib\canonical_aix_sysaix.h
    libiconv-1.15\lib\canonical_dos.h
    libiconv-1.15\lib\canonical_extra.h
    libiconv-1.15\lib\canonical_local.h
    libiconv-1.15\lib\canonical_local_sysaix.h
    libiconv-1.15\lib\canonical_local_syshpux.h
    libiconv-1.15\lib\canonical_local_sysosf1.h
    libiconv-1.15\lib\canonical_local_syssolaris.h
    libiconv-1.15\lib\canonical_osf1.h
    libiconv-1.15\lib\canonical_osf1_sysosf1.h
    libiconv-1.15\lib\canonical_sysaix.h
    libiconv-1.15\lib\canonical_syshpux.h
    libiconv-1.15\lib\canonical_sysosf1.h
    libiconv-1.15\lib\canonical_syssolaris.h
    libiconv-1.15\lib\ces_big5.h
    libiconv-1.15\lib\ces_gbk.h
    libiconv-1.15\lib\cjk_variants.h
    libiconv-1.15\lib\cns11643.h
    libiconv-1.15\lib\cns11643_1.h
    libiconv-1.15\lib\cns11643_15.h
    libiconv-1.15\lib\cns11643_2.h
    libiconv-1.15\lib\cns11643_3.h
    libiconv-1.15\lib\cns11643_4.h
    libiconv-1.15\lib\cns11643_4a.h
    libiconv-1.15\lib\cns11643_4b.h
    libiconv-1.15\lib\cns11643_5.h
    libiconv-1.15\lib\cns11643_6.h
    libiconv-1.15\lib\cns11643_7.h
    libiconv-1.15\lib\cns11643_inv.h
    libiconv-1.15\lib\converters.h
    libiconv-1.15\lib\cp1046.h
    libiconv-1.15\lib\cp1124.h
    libiconv-1.15\lib\cp1125.h
    libiconv-1.15\lib\cp1129.h
    libiconv-1.15\lib\cp1131.h
    libiconv-1.15\lib\cp1133.h
    libiconv-1.15\lib\cp1161.h
    libiconv-1.15\lib\cp1162.h
    libiconv-1.15\lib\cp1163.h
    libiconv-1.15\lib\cp1250.h
    libiconv-1.15\lib\cp1251.h
    libiconv-1.15\lib\cp1252.h
    libiconv-1.15\lib\cp1253.h
    libiconv-1.15\lib\cp1254.h
    libiconv-1.15\lib\cp1255.h
    libiconv-1.15\lib\cp1256.h
    libiconv-1.15\lib\cp1257.h
    libiconv-1.15\lib\cp1258.h
    libiconv-1.15\lib\cp437.h
    libiconv-1.15\lib\cp737.h
    libiconv-1.15\lib\cp775.h
    libiconv-1.15\lib\cp850.h
    libiconv-1.15\lib\cp852.h
    libiconv-1.15\lib\cp853.h
    libiconv-1.15\lib\cp855.h
    libiconv-1.15\lib\cp856.h
    libiconv-1.15\lib\cp857.h
    libiconv-1.15\lib\cp858.h
    libiconv-1.15\lib\cp860.h
    libiconv-1.15\lib\cp861.h
    libiconv-1.15\lib\cp862.h
    libiconv-1.15\lib\cp863.h
    libiconv-1.15\lib\cp864.h
    libiconv-1.15\lib\cp865.h
    libiconv-1.15\lib\cp866.h
    libiconv-1.15\lib\cp869.h
    libiconv-1.15\lib\cp874.h
    libiconv-1.15\lib\cp922.h
    libiconv-1.15\lib\cp932.h
    libiconv-1.15\lib\cp932ext.h
    libiconv-1.15\lib\cp936.h
    libiconv-1.15\lib\cp936ext.h
    libiconv-1.15\lib\cp943.h
    libiconv-1.15\lib\cp949.h
    libiconv-1.15\lib\cp950.h
    libiconv-1.15\lib\cp950ext.h
    libiconv-1.15\lib\dec_hanyu.h
    libiconv-1.15\lib\dec_kanji.h
    libiconv-1.15\lib\euc_cn.h
    libiconv-1.15\lib\euc_jisx0213.h
    libiconv-1.15\lib\euc_jp.h
    libiconv-1.15\lib\euc_kr.h
    libiconv-1.15\lib\euc_tw.h
    libiconv-1.15\lib\flags.h
    libiconv-1.15\lib\flushwc.h
    libiconv-1.15\lib\gb12345.h
    libiconv-1.15\lib\gb12345ext.h
    libiconv-1.15\lib\gb18030.h
    libiconv-1.15\lib\gb18030ext.h
    libiconv-1.15\lib\gb18030uni.h
    libiconv-1.15\lib\gb2312.h
    libiconv-1.15\lib\gbk.h
    libiconv-1.15\lib\gbkext1.h
    libiconv-1.15\lib\gbkext2.h
    libiconv-1.15\lib\gbkext_inv.h
    libiconv-1.15\lib\georgian_academy.h
    libiconv-1.15\lib\georgian_ps.h
    libiconv-1.15\lib\hkscs1999.h
    libiconv-1.15\lib\hkscs2001.h
    libiconv-1.15\lib\hkscs2004.h
    libiconv-1.15\lib\hkscs2008.h
    libiconv-1.15\lib\hp_roman8.h
    libiconv-1.15\lib\hz.h
    libiconv-1.15\lib\iconv_open1.h
    libiconv-1.15\lib\iconv_open2.h
    libiconv-1.15\lib\iso2022_cn.h
    libiconv-1.15\lib\iso2022_cnext.h
    libiconv-1.15\lib\iso2022_jp.h
    libiconv-1.15\lib\iso2022_jp1.h
    libiconv-1.15\lib\iso2022_jp2.h
    libiconv-1.15\lib\iso2022_jp3.h
    libiconv-1.15\lib\iso2022_kr.h
    libiconv-1.15\lib\iso646_cn.h
    libiconv-1.15\lib\iso646_jp.h
    libiconv-1.15\lib\iso8859_1.h
    libiconv-1.15\lib\iso8859_10.h
    libiconv-1.15\lib\iso8859_11.h
    libiconv-1.15\lib\iso8859_13.h
    libiconv-1.15\lib\iso8859_15.h
    libiconv-1.15\lib\iso8859_15.h
    libiconv-1.15\lib\iso8859_16.h
    libiconv-1.15\lib\iso8859_2.h
    libiconv-1.15\lib\iso8859_3.h
    libiconv-1.15\lib\iso8859_4.h
    libiconv-1.15\lib\iso8859_5.h
    libiconv-1.15\lib\iso8859_6.h
    libiconv-1.15\lib\iso8859_7.h
    libiconv-1.15\lib\iso8859_8.h
    libiconv-1.15\lib\iso8859_9.h
    libiconv-1.15\lib\isoir165.h
    libiconv-1.15\lib\isoir165ext.h
    libiconv-1.15\lib\java.h
    libiconv-1.15\lib\jisx0201.h
    libiconv-1.15\lib\jisx0208.h
    libiconv-1.15\lib\jisx0212.h
    libiconv-1.15\lib\jisx0213.h
    libiconv-1.15\lib\johab.h
    libiconv-1.15\lib\johab_hangul.h
    libiconv-1.15\lib\koi8_r.h
    libiconv-1.15\lib\koi8_ru.h
    libiconv-1.15\lib\koi8_t.h
    libiconv-1.15\lib\koi8_u.h
    libiconv-1.15\lib\ksc5601.h
    libiconv-1.15\lib\loops.h
    libiconv-1.15\lib\loop_unicode.h
    libiconv-1.15\lib\loop_wchar.h
    libiconv-1.15\lib\mac_arabic.h
    libiconv-1.15\lib\mac_centraleurope.h
    libiconv-1.15\lib\mac_croatian.h
    libiconv-1.15\lib\mac_cyrillic.h
    libiconv-1.15\lib\mac_greek.h
    libiconv-1.15\lib\mac_hebrew.h
    libiconv-1.15\lib\mac_iceland.h
    libiconv-1.15\lib\mac_roman.h
    libiconv-1.15\lib\mac_romania.h
    libiconv-1.15\lib\mac_thai.h
    libiconv-1.15\lib\mac_turkish.h
    libiconv-1.15\lib\mac_ukraine.h
    libiconv-1.15\lib\mulelao.h
    libiconv-1.15\lib\nextstep.h
    libiconv-1.15\lib\pt154.h
    libiconv-1.15\lib\relocatable.h
    libiconv-1.15\lib\riscos1.h
    libiconv-1.15\lib\rk1048.h
    libiconv-1.15\lib\shift_jisx0213.h
    libiconv-1.15\lib\sjis.h
    libiconv-1.15\lib\tcvn.h
    libiconv-1.15\lib\tds565.h
    libiconv-1.15\lib\tis620.h
    libiconv-1.15\lib\translit.h
    libiconv-1.15\lib\ucs2.h
    libiconv-1.15\lib\ucs2be.h
    libiconv-1.15\lib\ucs2internal.h
    libiconv-1.15\lib\ucs2le.h
    libiconv-1.15\lib\ucs2swapped.h
    libiconv-1.15\lib\ucs4.h
    libiconv-1.15\lib\ucs4be.h
    libiconv-1.15\lib\ucs4internal.h
    libiconv-1.15\lib\ucs4le.h
    libiconv-1.15\lib\ucs4swapped.h
    libiconv-1.15\lib\uhc_1.h
    libiconv-1.15\lib\uhc_2.h
    libiconv-1.15\lib\utf16.h
    libiconv-1.15\lib\utf16be.h
    libiconv-1.15\lib\utf16le.h
    libiconv-1.15\lib\utf32.h
    libiconv-1.15\lib\utf32be.h
    libiconv-1.15\lib\utf32le.h
    libiconv-1.15\lib\utf7.h
    libiconv-1.15\lib\utf8.h
    libiconv-1.15\lib\vietcomb.h
    libiconv-1.15\lib\viscii.h
    libiconv-1.15\srclib\localcharset.h
)



add_library(iconv ${SRC_FILES})




